[tool.poetry]
name = "mobile-security-framework-mobsf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mobile_security_framework_mobsf"}]

[tool.poetry.dependencies]
python = "^3.10"
waitress = {version = ">=1.4.4", platform = "Windows"}
gunicorn = "^20.1.0"
django = ">=3.1.5"
lxml = ">=4.6.2"
rsa = ">=4.7"
requests = ">=2.25.1"
bs4 = ">=0.0.1"
colorlog = ">=4.7.2"
macholib = ">=1.14"
whitenoise = ">=5.2.0"
psutil = ">=5.8.0"
shelljob = ">=0.6.2"
asn1crypto = ">=1.4.0"
oscrypto = ">=1.2.1"
distro = ">=1.5.0"
ip2location = "8.9.0"
pdfkit = ">=0.6.1"
google-play-scraper = ">=0.1.2"
apkid = "2.1.4"
biplist = ">=1.0.3"
lief = ">=0.12.1"
http-tools = ">=2.1.1"
androguard = "3.4.0a1"
frida = "15.2.2"
tldextract = "3.4.0"
openstep-parser = "1.5.4"
svgutils = "0.3.4"
ruamel-yaml = "0.16.13"
decorator = "4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
